--- a/index.html
+++ b/index.html
@@ -8,5 +8,29 @@
 </head>
 <body>
     <h1>This is Init Cmd.</h1>
+    <div>
+        <h2>Steps</h2>
+   <ul>
+    <li>
+        first: mkdir loc. </li>
+        <li>cd loc</li>
+        <li>git Init</li>
+        <li>ls</li>
+        <li>create files</li>
+        <li>index.html........</li>
+        <li>git add .</li>
+        <li>git commit -m"msg"</li>
+        <li>git status</li>
+        <li>Go in GITHUB</li>
+        <li>craete new repo without read me</li>
+        <li>Then in VS terminal</li>
+        <li>git remote add origin link</li>
+        <li>git remote -v</li>
+        <li>git branch</li>
+        <li>git branch -M main(optional)</li>
+        <li>git push origin main</li>
+   
+   </ul>
+    </div>
 </body>
 </html>
